<resources>
    <string name="app_name">Instagram.app</string>
    <string name="username_email_or_mobile_number">Username,email or mobile number</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="instagram_icon">instagram_icon</string>
    <string name="create_new_account">Create new account</string>
    <string name="back">back</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="full_name">Full name</string>
    <string name="next">Next</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_a_password_with_at_least_6_letters">Create a password with at least 6 letters or numbers.It should be something others can\'t guess.</string>
    <string name="create_a_password">Create a password</string>
    <string name="save_your_login_info">Save your login info?</string>
    <string name="we_ll_save_info">We\'ll save the login info for cloud,so you won\'t need to enter it next time you log in.</string>
    <string name="save">save</string>
    <string name="not_now">Not now</string>
    <string name="what_s_your_birthday">What\'s your birthday?</string>
    <string name="use_your_own_birthday">Use your own birthday,even if this account is for a business, a pet or something else. No one will see this unless you choose to share it.</string>
    <string name="birthday">Birthday</string>
    <string name="create_a_username">Create a username</string>
    <string name="add_a_username">Add a username or use our suggestion You can change this at any time.</string>
    <string name="username">Username</string>
    <string name="what_s_your_mobile_number">What\'s your mobile number?</string>
    <string name="enter_the_mobile">Enter the mobile number where you can be contacted. No one will see this on your profile.</string>
    <string name="mobile_number">Mobile number</string>
    <string name="receive_sms">You may receive SMS notifications from us for security and login purposes.</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="what_s_your_email">What\'s your email?</string>
    <string name="enter_the_email">Enter the email where you can be contacted. No one will see this on your profile.</string>
    <string name="email">Email</string>
    <string name="sign_up_with_mobile_number">Sign up with mobile Number</string>
    <string name="enter_the_6_digit_code">To confirm your account, enter the 6-digit code we sent to your number</string>
    <string name="i_didn_t_get_the_code">I didn\'t get the code</string>
    <string name="enter_the_confirmation_code">Enter the confirmation code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agree_to_instagram_s_terms_and_policies">Agree to Instagram\'s terms and policies</string>
    <string name="i_agree">I agree</string>
    <string name="sign_up">Sign Up</string>
    <string name="like">0 like</string>
    <string name="dm">dm</string>
    <string name="story">story</string>
    <string name="main">main</string>
    <string name="search">search</string>
    <string name="add">add</string>
    <string name="reels">reels</string>
    <string name="profile">profile</string>
    <string name="comment">comment</string>
    <string name="share">share</string>
    <string name="saved">saved</string>
    <string name="saved_toolbar_title">Saved</string>
    <string name="post">Post</string>
    <string name="option">option</string>
    <string name="menu">Menu</string>
    <string name="_0">0</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="share_profile">Share Profile</string>
    <string name="add_user">add user</string>
    <string name="no_posts_yet">No posts yet</string>
    <string name="settings_and_privacy">Settings and privacy</string>
    <string name="your_activity">Your activity</string>
    <string name="archive">Archive</string>
    <string name="qr_code">QR code</string>
    <string name="supervision">Supervision</string>
    <string name="orders_and_payments">Orders and payments</string>
    <string name="lists">Lists</string>
    <string name="favorites">Favorites</string>
    <string name="logout">Logout</string>
    <string name="log_out_of_your_account">Log out of your account?</string>
    <string name="log_out">Log out</string>
    <string name="cancel">Cancel</string>
    <string name="imagepost">ImagePost</string>
    <string name="write_a_caption_or_add_a_poll">Write a caption or add a poll...</string>
    <string name="tag_people">Tag people</string>
    <string name="add_reminder">Add reminder</string>
    <string name="audience">Audience</string>
    <string name="add_location">Add location</string>
    <string name="caption">Caption</string>
    <string name="follow">Follow</string>
    <string name="message">Message</string>
    <string name="camera">camera</string>
    <string name="follows">Follows</string>
    <string name="view_all_0_comments">View all 0 comments</string>
    <string name="_0_hours_ago">0 hours ago</string>
    <string name="edit_picture">Edit picture</string>
    <string name="bio">Bio</string>
    <string name="pronouns">Pronouns</string>
    <string name="links">Links</string>
    <string name="switch_to_professional_account">Switch to professional account</string>
    <string name="personal_information_settings">Personal information settings</string>
    <string name="sign_up_for_meta_verified">Sign up for Meta Verified</string>
    <string name="done">Done</string>
    <string name="comments">Comments</string>
    <string name="h">h</string>
    <string name="add_a_comment">add a comment...</string>
    <string name="something_gone_wrong">Something gone wrong</string>
    <string name="please_select_an_image">Please select an image</string>
    <string name="failed_to_upload_image">Failed to upload image!</string>
    <string name="Failed">Failed</string>
    <string name="add_story">Add story</string>
    <string name="incorrect_username_or_password">Incorrect username or password</string>
    <string name="please_wait_adding_the_post">Please wait adding the post</string>
    <string name="story_successfully_shared">Story successfully shared</string>
    <string name="please_select_photo">Please select photo</string>
    <string name="permission_needed_for_gallery">Permission needed for gallery</string>
    <string name="give_permission">Give permission</string>
    <string name="permission_needed">Permission needed</string>
    <string name="please_add_the_comment">Please add the comment</string>
    <string name="messages">Messages</string>
    <string name="message_">Message...</string>
    <string name="no_such_document">No such document</string>
    <string name="get_failed_with">"get failed with "</string>
    <string name="delete_message">Delete message</string>
    <string name="do_you_want_to_delete_message">Do you want to delete message?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_this_story">Delete this story?</string>
    <string name="view_story_or_add_story">View Story or Add Story</string>
    <string name="do_you_want_to_view_the_story_or_add_a_new_one">Do you want to view the story or add a new one?</string>
    <string name="view_story">view story</string>
    <string name="error_occurred">Error occurred!</string>
    <string name="liked">liked</string>
    <string name="unlike">like</string>
    <string name="_0_likes">0 likes</string>
    <string name="_1_like">1 like</string>
    <string name="info">Info</string>
    <string name="update_user_info">Update user info...</string>
    <string name="followers_">Followers</string>
    <string name="following_">Following</string>
    <string name="just_now">Just now</string>
    <string name="_1_minute_ago">1 minute ago</string>
    <string name="_1_hour_ago">1 hour ago</string>
    <string name="_1_day_ago">1 day ago</string>
    <string name="dd_mmmm">dd MMMM</string>
    <string name="all_fields_are_required">All fields are required</string>
    <string name="password_must_have_at_least_6_characters">Password must have at least 6 characters</string>
    <string name="user_with_this_email_already_exists">User with this email already exists</string>
</resources>