<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgProfile"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="5dp"
            app:srcCompat="@string/profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/circle" />

        <TextView
            android:id="@+id/txtUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/username"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imgPost"
            app:layout_constraintStart_toEndOf="@id/imgProfile"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@color/white"
            android:contentDescription="@string/option"
            android:padding="13dp"
            android:src="@drawable/option_icon"
            app:layout_constraintBottom_toTopOf="@+id/imgPost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgPost"
            android:layout_width="match_parent"
            android:layout_height="480dp"
            app:srcCompat="@drawable/ic_launcher_background"
            android:contentDescription="@string/post"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgProfile" />

        <ImageButton
            android:id="@+id/btnLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/like"
            android:padding="13dp"
            android:src="@drawable/like_icon"
            app:layout_constraintBottom_toBottomOf="@+id/btnComment"
            app:layout_constraintEnd_toStartOf="@+id/btnComment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgPost" />

        <ImageButton
            android:id="@+id/btnComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/comment"
            android:padding="13dp"
            android:src="@drawable/comment_icon"
            app:layout_constraintEnd_toStartOf="@+id/btnShare"
            app:layout_constraintStart_toEndOf="@+id/btnLike"
            app:layout_constraintTop_toBottomOf="@id/imgPost" />

        <ImageButton
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/share"
            android:padding="13dp"
            android:src="@drawable/share_icon"
            app:layout_constraintBottom_toBottomOf="@+id/btnComment"
            app:layout_constraintStart_toEndOf="@+id/btnComment"
            app:layout_constraintTop_toBottomOf="@id/imgPost" />

        <ImageButton
            android:id="@+id/btnSaved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/saved"
            android:padding="13dp"
            android:src="@drawable/saved_icon"
            app:layout_constraintBottom_toBottomOf="@+id/btnComment"
            app:layout_constraintEnd_toEndOf="@id/imgPost"
            app:layout_constraintTop_toBottomOf="@id/imgPost" />

        <TextView
            android:id="@+id/txtLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/like"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/btnLike"
            app:layout_constraintTop_toBottomOf="@id/btnLike"
            />
        <TextView
            android:id="@+id/txtUsername2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/username"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/txtLikes"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="5dp"/>
        <TextView
            android:id="@+id/txtCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/txtUsername2"
            app:layout_constraintTop_toBottomOf="@+id/txtLikes"
            android:text="@string/caption"
            android:layout_margin="5dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>